--- a/examples/webgl_loader_fbx_dying.html
+++ b/examples/webgl_loader_fbx_dying.html
@@ -40,11 +40,11 @@
 			const clock = new THREE.Clock();
 
 			const params = {
-				asset: 'dying'
+				asset: 'Dying'
 			};
 
 			const assets = [
-				'dying',
+				'Dying',
 				'morph_test'
 			];
 
