--- a/examples/webgl_loader_fbx_reaction.html
+++ b/examples/webgl_loader_fbx_reaction.html
@@ -40,11 +40,11 @@
 			const clock = new THREE.Clock();
 
 			const params = {
-				asset: 'reaction'
+				asset: 'Reaction'
 			};
 
 			const assets = [
-				'reaction',
+				'Reaction',
 				'morph_test'
 			];
 
