--- a/examples/webgl_loader_fbx_silly_dancing.html
+++ b/examples/webgl_loader_fbx_silly_dancing.html
@@ -40,11 +40,11 @@
 			const clock = new THREE.Clock();
 
 			const params = {
-				asset: 'silly dancing'
+				asset: 'Silly Dancing'
 			};
 
 			const assets = [
-				'Samba Dancing',
+				'Silly Dancing',
 				'morph_test'
 			];
 
